[gd_scene load_steps=3 format=3 uid="uid://k2bgv6cwudd0"]

[ext_resource type="Script" uid="uid://cphcx5cm4i2yx" path="res://addons/easy_charts/utilities/containers/legend/function_type.gd" id="1"]
[ext_resource type="Script" uid="uid://ckinjw2oipoxc" path="res://addons/easy_charts/utilities/containers/legend/function_label.gd" id="2"]

[node name="FunctionLabel" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 5
script = ExtResource("2")

[node name="FunctionType" type="Label" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
script = ExtResource("1")

[node name="FunctionName" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
